--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,11 @@
             <version>2.4.0.Final</version>
             <scope>compile</scope>
         </dependency>
+        <!-- JSF specification and Mojarra implementation     -->
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.2.13</version>
+            <version>2.2.14</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -37,6 +38,7 @@
             <!-- para compilar e colocar no war no projeto            -->
             <scope>compile</scope>
         </dependency>
+        <!--        -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -47,7 +49,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.3.0.Final</version>
+            <version>5.3.2.Final</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
